--- a/src/app/components/admin/category/insert-category/insert-category.component.html
+++ b/src/app/components/admin/category/insert-category/insert-category.component.html
@@ -1,49 +1,58 @@
+<app-breadcrumb [title]="'إدارة التصنيفات'" [active_item]="'Form Wizard'"></app-breadcrumb>
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-header" style="padding-bottom: 5px !important">
-            <div>
-              <h5 class="pb-2">تسجيل تصنيف جديد</h5>
-              <span> يرجى ملئ جميع الخانات </span>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-header" style="padding-bottom:5px !important ;">
+          <div *ngIf="update; else elseBlock1">
+            <h5 class="pb-2">تعديل  تصنيف موجودة</h5>
+            يمكنك تعديل تصنيف  أو أكثر فى قائمة التصنيفات
+          </div>
+          <ng-template #elseBlock1>
+            <h5 class="pb-2">إضافة تصنيف  جديدة</h5>
+            يمكنك إضافة تصنيف أو أكثر فى قائمة التصنيفات
+          </ng-template>
+
+        </div>
+        <div class="card-body">
+          <form [formGroup]="insertForm" (ngSubmit)="onSubmit()">
+            <div class="row form-group">
+              <!--regionNameAR-->
+              <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <label for="nameA"> أسم التصنيف  باللغة العرببة</label>
+                <input disableEnglish class="form-control" id="nameA" type="text" formControlName="titleAr"
+                  [tooltip]="fc.titleAr.errors?.required ? 'هذا الحقل مطلوب' : null" container="nameA"
+                  [isDisabled]="!((fc.titleAr.errors?.required && fc.titleAr.touched) )"
+                  [class.is-valid]="fc.titleAr.valid && (fc.titleAr.touched || fc.titleAr.value)"
+                  [class.is-invalid]="fc.titleAr.invalid && (fc.titleAr.touched )"><!-- onlyAlphabets -->
+              </div>
+
+              <!--regionName-->
+              <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <label for="name">أسم  التصنيف الدلاليه الانجليزية</label>
+                <input disableArabic class="form-control" id="name" type="text" formControlName="title"
+                  [tooltip]="fc.title.errors?.required ? 'هذا الحقل مطلوب' : null" container="nameA"
+                  [isDisabled]="!((fc.title.errors?.required && fc.title.touched) )"
+                  [class.is-valid]="fc.title.valid && (fc.title.touched || fc.title.value)"
+                  [class.is-invalid]="fc.title.invalid && (fc.title.touched )"><!-- onlyAlphabets -->
+              </div>
+
+          
+          
             </div>
-            <ng-template>
-  
+            <div *ngIf="update; else elseBlock">
+              <button class="btn btn-primary pull-right mt-3" [disabled]="requestSent"  type="submit">
+                تعديل
+              </button>
+            </div>
+            <ng-template #elseBlock>
+              <button class="btn btn-primary pull-right mt-3" [disabled]="requestSent" type="submit">
+                إضافة
+              </button>
             </ng-template>
-          </div>
-          <div class="card-body">
-            <form class="needs-validation" autocomplete="off" (ngSubmit)="onSubmit()" novalidate>
-              <div class="form-row">
-                <!-- title Ar  -->
-                <div class="col-6 mb-3">
-                  <label for="validation01"><span class="validation-required">*</span> الأسم</label>
-                  <!-- <input class="form-control" id="validation01" type="text" [(ngModel)]="category.titleAr"
-                    appDisableWeritingEnglish required placeholder="الأسم" containerClass="" /> -->
-                    <input class="form-control" id="validation01" type="text" name="titleAr"
-                     [(ngModel)]="category.titleAr" appDisableWeritingEnglish required placeholder="الأسم" containerClass="" />
-                </div>
-                <div class="col-6 mb-3">
-                  <label for="validation01"><span class="validation-required">*</span> الاسم بالانجليزيه</label>
-                  <!-- <input class="form-control" id="validation01" type="text" [(ngModel)]="category.title" required
-                    placeholder="الاسم بالانجليزيه" containerClass="" /> -->
-                    <input class="form-control" id="validation01" type="text" name="title" 
-                    [(ngModel)]="category.title" required placeholder="الاسم بالانجليزيه" containerClass="" />
-                </div>
-              </div>
-  
-              <div *ngIf="update; else elseBlock">
-                <button class="btn btn-primary pull-right mt-3" [disabled]="requestSent" type="submit">
-                  تعديل
-                </button>
-              </div>
-              <ng-template #elseBlock>
-                <button class="btn btn-primary pull-right mt-3" [disabled]="requestSent" type="submit">
-                  إضافة
-                </button>
-              </ng-template>
-            </form>
-          </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
