--- a/src/app/components/admin/category/insert-category/insert-category.component.html
+++ b/src/app/components/admin/category/insert-category/insert-category.component.html
@@ -29,7 +29,7 @@
 
               <!--regionName-->
               <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                <label for="name">أسم  التصنيف الدلاليه الانجليزية</label>
+                <label for="name">أسم  التصنيف  الانجليزية</label>
                 <input disableArabic class="form-control" id="name" type="text" formControlName="title"
                   [tooltip]="fc.title.errors?.required ? 'هذا الحقل مطلوب' : null" container="nameA"
                   [isDisabled]="!((fc.title.errors?.required && fc.title.touched) )"
