--- a/src/app/components/admin/article/list-article/list-article.component.html
+++ b/src/app/components/admin/article/list-article/list-article.component.html
@@ -44,15 +44,24 @@
                                         <td class="p-2">{{view.views}}</td>
                                         <td class="p-2">{{view.reactions}}</td>
 
-                                            <td class="font-style chose">
-                                                <!-- <button class="btn pull-right"
-                                                    style="color: rgba(35, 118, 241, 0.667); padding: 7px"
-                                                    (click)="update(view.id)">
-                                                    <i class="fa fa-pencil"></i>
-                                                </button> -->
+                                            <!-- <td class="font-style chose">
+                                               
                                                 <button class=" border-0 btn btn-outline-primary  mr-2 d-inline-flex px-2 py-1" *appHasPermission="2"
                                                   (click)="update(item)">
                                                      <i class="fa fa-pencil fs-5" aria-hidden="true"></i></button>
+                                                   <button class="btn  pull-right"  style="color: red; padding: 7px"
+                                                   (click)="delete(view.id)">
+                                                    <i class="fa fa-trash"></i>
+                                                       </button>
+                                                
+                                            
+                                            </td> -->
+                                            <td class="font-style chose">
+                                                <button class="btn pull-right"
+                                                    style="color: rgba(35, 118, 241, 0.667); padding: 7px"
+                                                    (click)="update(view.id)">
+                                                    <i class="fa fa-pencil"></i>
+                                                </button>
                                                    <button class="btn  pull-right"  style="color: red; padding: 7px"
                                                    (click)="delete(view.id)">
                                                     <i class="fa fa-trash"></i>
